add_library(resources OBJECT resource_all.cpp
                             resource_index.cpp
                             resource_register.cpp
                             resource_session.cpp
                             resource_shout.cpp
                             resource_shouts.cpp
                             resource_user.cpp
                             resource_users.cpp)

